@startuml

title __DAO's Class Diagram__\n




        interface com.example.calc.dao.MatrixDao {
            {abstract} + getListMatrix()
            {abstract} + getNoNo()
            {abstract} + getNoYes()
            {abstract} + getYesNo()
            {abstract} + getYesYes()
        }



  




        class com.example.calc.dao.MatrixDaoImpl {
            - connection : Connection
            - matrixList : List<Matrix>
            + getListMatrix()
            + getNoNo()
            + getNoYes()
            + getYesNo()
            + getYesYes()
        }



  




        class com.example.calc.dao.ResultDaoImpl {
            - connection : Connection
            - resultsList : List<Result>
            + getResultList()
        }



  

  com.example.calc.dao.MatrixDaoImpl .up.|> com.example.calc.dao.MatrixDao
  com.example.calc.dao.MatrixDaoImpl o-- com.example.calc.db.ConnectionDB : connectionDB
  com.example.calc.dao.ResultDaoImpl o-- com.example.calc.db.ConnectionDB : connectionDB


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
